tests/badly_positioned_objassign/badly_positioned_objassign.exp
Error ----------------------------------------------------------------------------------------------------- test1.js:3:1

Incorrect arguments passed to `Object.assign` because string [1] is incompatible with number [2]. [incompatible-type]

   test1.js:3:1
   3| Object.assign({ p: 0 }, new C);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test1.js:1:14
   1| class C { p: string };
                   ^^^^^^ [1]
   test1.js:3:20
   3| Object.assign({ p: 0 }, new C);
                         ^ [2]


Error ---------------------------------------------------------------------------------------------------- test3.js:4:11

Cannot assign `x` to `a` because rest of object pattern [1] is incompatible with string [2]. [incompatible-type]

   test3.js:4:11
   4| ({...a} = x);
                ^

References:
   test3.js:4:6
   4| ({...a} = x);
           ^ [1]
   test3.js:3:9
   3| var a : string;
              ^^^^^^ [2]



Found 2 errors
